# pytrade

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  ideas.py  risk.pyx  setup.cfg  setup.py
.github/: FUNDING.yml
pytrade/: __init__.py  _version.py
pytrade/calendars/: __init__.py
pytrade/core/: indicators.py
